feat(SectionHero.tsx): layout section on PageHome

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@tailwindcss /preflight;
+@tailwindcss /utilities;
+
+@layer components {
+  .container {
+    @apply mx-auto max-w-[1450px] px-[10px];
+  }
+}
