--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -5,6 +5,6 @@
 
 @layer components {
   .container {
-    @apply mx-auto max-w-[1450px] px-[10px];
+    @apply mx-auto max-w-[1450px] px-6;
   }
 }
