--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -3,6 +3,16 @@
 @tailwindcss /preflight;
 @tailwindcss /utilities;
 
+@theme {
+  /** custom css variable name convention:
+  * --ac - for custom css variables (aster craft)
+  *     -namespace-token
+  * namespace - eg: color
+  * token - eg: btn-action
+  */
+  --ac-color-btn-action: #f6f6f6;
+}
+
 @layer components {
   .Container {
     @apply mx-auto max-w-[1450px] px-6;
