--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -5,15 +5,16 @@
 
 @theme {
   /** custom css variable name convention:
-  *     -namespace-token-ac
-  *             OR
   *     -namespace-token
+  *             OR
+  *     -namespace-ac-token
   *   where:
   * namespace - eg: color
-  * token - eg: btn-action
   * --ac - for custom css variables (aster craft)
+  * token - eg: btn-action
   */
-  --color-btn-action-ac: #f6f6f6;
+  --color-ac-btn-action: #f6f6f6;
+  --color-ac-section-divider: #d0d0d0;
 }
 
 @layer components {
