feat(SliderTestimonials): imitial layout without styles

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -19,6 +19,6 @@
 
 @layer components {
   .Container {
-    @apply mx-auto max-w-[1450px] px-6;
+    @apply mx-auto max-w-[1450px] px-[6px];
   }
 }
