style(ModalStartProject): style a header

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -17,6 +17,8 @@
   --color-ac-input-start-projec: #f6f6f6;
   --color-ac-section-divider: #d0d0d0;
   --color-ac-btn-slider-navigation: #cccfcf;
+  --color-ac-paragraph-light: #8a8a8a;
+  --color-ac-link-email: #1a1a1a;
 }
 
 @layer components {
