feat(ButtonSubmit): disabled button when email sending

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -19,6 +19,7 @@
   --color-ac-btn-slider-navigation: #cccfcf;
   --color-ac-paragraph-light: #8a8a8a;
   --color-ac-link-email: #1a1a1a;
+  --color-ac-eerie-black: #1a1a1a;
 }
 
 @layer components {
