--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -20,6 +20,7 @@
   --color-ac-paragraph-light: #8a8a8a;
   --color-ac-link-email: #1a1a1a;
   --color-ac-eerie-black: #1a1a1a;
+  --color-ac-black-wash: #0b0d0d;
 }
 
 @layer components {
