feat and chore(SectionBenefits): create layout and styles of this section for mobile devices

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -27,4 +27,8 @@
   .Container {
     @apply mx-auto w-full max-w-[1450px] px-[15px];
   }
+
+  .app-container {
+    @apply mx-auto w-full max-w-[1450px] px-[15px];
+  }
 }
