--- a/frontend/src/widgets/consultation-section/ui/consultation-section/consultation-section.module.scss
+++ b/frontend/src/widgets/consultation-section/ui/consultation-section/consultation-section.module.scss
@@ -1,8 +1,33 @@
 .title {
   display: flex;
   justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+  align-items: center;
+
+  flex-direction: column;
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+  }
 }
 
 .titleText {
   margin-bottom: 0;
+  text-wrap: nowrap;
+  font-size: clamp(1.5rem, 1.034rem + 2.3301vw, 3rem);
+}
+
+.buttonStartProject {
+  padding: 10px 15px;
+  font-size: clamp(1.5rem, 1.034rem + 2.3301vw, 3rem);
+  line-height: 1;
+
+  // @media (min-width: 768px) {
+  //   font-size: 30px;
+  // }
+
+  // @media (min-width: 1024px) {
+  //   font-size: 48px;
+  // }
 }
