--- a/frontend/src/app/styles/tokens/typography/_typefaces.scss
+++ b/frontend/src/app/styles/tokens/typography/_typefaces.scss
@@ -1,3 +1,4 @@
+// switch to @font-face in the future to remove 3rd party dependency
 @import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kode+Mono:wght@400..700&display=swap");
 
 $md-ref-typeface-brand: "Kode Mono", monospace;
