refactor(styles): move token definitions from app/ to shared/

--- a/frontend/src/shared/styles/mixins/_typography.scss
+++ b/frontend/src/shared/styles/mixins/_typography.scss
@@ -1,6 +1,6 @@
 @use "sass:map";
 
-@use "../../../app/styles/tokens/typography/" as typo;
+@use "../tokens/typography/" as typo;
 
 /// @param {String} $style - The type scale name ("display-large", "body-medium")
 @mixin typescale($style) {
