feat(styles): add global style for btns and links to be at least 48x48px for accessibility

--- a/frontend/src/widgets/header/ui/header.module.scss
+++ b/frontend/src/widgets/header/ui/header.module.scss
@@ -100,6 +100,8 @@ $z-index: 1000;
 
     .navItem {
       display: flex;
+      justify-content: center;
+      align-items: center;
       flex-direction: column;
       gap: spacing.$md-sys-spacing-1;
 
