--- a/frontend/src/shared/styles/global.scss
+++ b/frontend/src/shared/styles/global.scss
@@ -15,3 +15,12 @@ body {
   width: 100%;
   max-width: 1450px;
 }
+
+button,
+a {
+  cursor: pointer;
+
+  // minimum btns size for accessibility
+  min-width: 48px;
+  min-height: 48px;
+}
