feat(styles): add more spacing tokens

--- a/frontend/src/shared/styles/tokens/spacing/index.scss
+++ b/frontend/src/shared/styles/tokens/spacing/index.scss
@@ -14,3 +14,6 @@ $md-sys-spacing-20: $spacing-base * 20;
 $md-sys-spacing-24: $spacing-base * 24;
 $md-sys-spacing-32: $spacing-base * 32;
 $md-sys-spacing-40: $spacing-base * 40;
+$md-sys-spacing-50: $spacing-base * 50;
+$md-sys-spacing-60: $spacing-base * 60;
+$md-sys-spacing-70: $spacing-base * 70;
