refactor(styles): use fsd principles to structure scss libraries

--- a/frontend/src/shared/styles/lib/responsive-design/_fluid-scale.scss
+++ b/frontend/src/shared/styles/lib/responsive-design/_fluid-scale.scss
@@ -1,6 +1,6 @@
 @use "sass:math";
 
-@use "../tokens/breakpoints/" as brp;
+@use "../../tokens/breakpoints/" as brp;
 
 /// Calculate fluid font size using clamp()
 /// @param {Number} $min-size - minimum font size in px
