--- a/frontend/src/shared/styles/tokens/elevation/index.scss
+++ b/frontend/src/shared/styles/tokens/elevation/index.scss
@@ -1,7 +1,31 @@
+////
+/// Material Design 3 elevation system.
+///
+/// Provides box shadow tokens for component elevation.
+///
+/// @group Elevation
+/// @link https://m3.material.io/styles/elevation/tokens Elevation tokens
+////
+
 @use "tokens" as elevation-tokens;
 
-/// Use for applying elevation to the element
-/// @param {Number} $level - level of the elevation (0-5)
+/// Apply elevation box shadow.
+///
+/// @param {Number} $level - Elevation level from 0 to 5
+///
+/// @example scss
+///   .card {
+///     @include elevation(1);
+///     
+///     &:hover {
+///       @include elevation(2);
+///     }
+///   }
+///
+/// @throw Error if level is not between 0-5
+///
+/// @group Elevation
+/// @output box-shadow
 @mixin elevation($level) {
   @if $level == 0 {
     box-shadow: elevation-tokens.$md-sys-elevation-0;
