--- a/frontend/src/shared/styles/tokens/typography/_typefaces.scss
+++ b/frontend/src/shared/styles/tokens/typography/_typefaces.scss
@@ -1,5 +1,18 @@
-// switch to @font-face in the future to remove 3rd party dependency
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kode+Mono:wght@400..700&display=swap");
+////
+/// defines reference typeface tokens
+/// currently imports typefaces from google fonts
+/// needs to be change to downloaded fonts in the future
+///
+/// @group typography
+////
 
-$md-ref-typeface-brand: "Kode Mono", monospace;
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Kode+Mono:wght@400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap");
+
+/// Used for display, headline, title type scales
+/// @type String
+$md-ref-typeface-brand: "Kode Mono", "Tektur", monospace;
+
+/// Used for body and label type scales
+/// @type String
 $md-ref-typeface-plain: "JetBrains Mono", monospace;
