feat(styles): add getter functions for typogrphy tokens

--- a/frontend/src/shared/styles/tokens/typography/_baseline-type-scale.scss
+++ b/frontend/src/shared/styles/tokens/typography/_baseline-type-scale.scss
@@ -13,6 +13,7 @@ $md-sys-typescale: (
     "font": $md-ref-typeface-brand,
     "size": 57px,
     "weight": 400,
+    // TODO: replace with dynamic ratio? (e.g. 1.12)
     "line-height": 64px,
     "tracking": -0.25px,
   ),
