feat(styles): convert line-height to unitless values for auto scaling with font size

--- a/frontend/src/shared/styles/tokens/typography/_emphasized-type-scale.scss
+++ b/frontend/src/shared/styles/tokens/typography/_emphasized-type-scale.scss
@@ -13,63 +13,63 @@ $md-sys-typescale-emphasized: (
     "font": $md-ref-typeface-brand,
     "size": 57px,
     "weight": 500,
-    "line-height": 64px,
+    "line-height": 1.123,
     "tracking": -0.25px,
   ),
   "display-medium": (
     "font": $md-ref-typeface-brand,
     "size": 45px,
     "weight": 500,
-    "line-height": 52px,
+    "line-height": 1.156,
     "tracking": 0,
   ),
   "display-small": (
     "font": $md-ref-typeface-brand,
     "size": 36px,
     "weight": 500,
-    "line-height": 44px,
+    "line-height": 1.222,
     "tracking": 0,
   ),
   "headline-large": (
     "font": $md-ref-typeface-brand,
     "size": 32px,
     "weight": 500,
-    "line-height": 40px,
+    "line-height": 1.25,
     "tracking": 0,
   ),
   "headline-medium": (
     "font": $md-ref-typeface-brand,
     "size": 28px,
     "weight": 500,
-    "line-height": 36px,
+    "line-height": 1.286,
     "tracking": 0,
   ),
   "headline-small": (
     "font": $md-ref-typeface-brand,
     "size": 24px,
     "weight": 500,
-    "line-height": 32px,
+    "line-height": 1.333,
     "tracking": 0,
   ),
   "title-large": (
     "font": $md-ref-typeface-brand,
     "size": 22px,
     "weight": 500,
-    "line-height": 28px,
+    "line-height": 1.273,
     "tracking": 0,
   ),
   "title-medium": (
     "font": $md-ref-typeface-brand,
     "size": 16px,
     "weight": 700,
-    "line-height": 24px,
+    "line-height": 1.5,
     "tracking": 0,
   ),
   "title-small": (
     "font": $md-ref-typeface-brand,
     "size": 14px,
     "weight": 700,
-    "line-height": 20px,
+    "line-height": 1.429,
     "tracking": 0.1px,
   ),
 
@@ -77,21 +77,21 @@ $md-sys-typescale-emphasized: (
     "font": $md-ref-typeface-plain,
     "size": 16px,
     "weight": 500,
-    "line-height": 24px,
+    "line-height": 1.5,
     "tracking": 0.5px,
   ),
   "body-medium": (
     "font": $md-ref-typeface-plain,
     "size": 16px,
     "weight": 500,
-    "line-height": 20px,
+    "line-height": 1.25,
     "tracking": 0.25px,
   ),
   "body-small": (
     "font": $md-ref-typeface-plain,
     "size": 12px,
     "weight": 500,
-    "line-height": 16px,
+    "line-height": 1.333,
     "tracking": 0.4px,
   ),
 
@@ -99,21 +99,21 @@ $md-sys-typescale-emphasized: (
     "font": $md-ref-typeface-plain,
     "size": 14px,
     "weight": 700,
-    "line-height": 20px,
+    "line-height": 1.429,
     "tracking": 0.1px,
   ),
   "label-medium": (
     "font": $md-ref-typeface-plain,
     "size": 12px,
     "weight": 700,
-    "line-height": 16px,
+    "line-height": 1.333,
     "tracking": 0.5px,
   ),
   "label-small": (
     "font": $md-ref-typeface-plain,
     "size": 11px,
     "weight": 700,
-    "line-height": 16px,
+    "line-height": 1.455,
     "tracking": 0.5px,
   ),
 );
