--- a/frontend/src/widgets/section-about-us/ui/about-us-section.module.scss
+++ b/frontend/src/widgets/section-about-us/ui/about-us-section.module.scss
@@ -48,17 +48,21 @@
           24px,
           t.get-typescale-value("display-medium"),
           t.$md-sys-viewport-compact,
-          t.$md-ref-breakpoint-expanded-max
+          
         );
       }
     }
   }
 
+
   .animateUnderline {
     h2::after {
-      animation: underlineOpen 0.8s ease-out forwards;
+      width: 30%;
+      @include t.spatial("fast");
+      transition-property: width;
     }
   }
+
 
   .content {
     display: flex;
