--- a/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
+++ b/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
@@ -4,4 +4,25 @@
   letter-spacing: -0.025em;
   color: #d4d4d8;
   overflow: hidden;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
+
+.brandName:hover {
+  background: linear-gradient(90deg, #667eea 0%, #77C6D2 50%,#764ba2 100%);
+  background-size: 200% 200%;
+  background-position: 0% 50%;
+  color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: gradientAnimation 1s ease-in-out infinite alternate;
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
 }
