--- a/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
+++ b/frontend/src/widgets/footer/ui/animated-brand-name/animated-brand-name.module.scss
@@ -1,3 +1,5 @@
+@use "../../../../shared/styles/tokens/" as t;
+
 .brandName {
   text-align: center;
   font-size: clamp(2.5rem, -1rem + 16vw, 14rem);
@@ -7,8 +9,8 @@
   -webkit-background-clip: text;
   background-clip: text;
 }
-
-.brandName:hover {
+@media  (min-width: t.$md-ref-breakpoint-large-min) {
+ .brandName:hover {
   background: linear-gradient(90deg, #667eea 0%, #77C6D2 50%,#764ba2 100%);
   background-size: 200% 200%;
   background-position: 0% 50%;
@@ -16,6 +18,7 @@
   -webkit-background-clip: text;
   background-clip: text;
   animation: gradientAnimation 1s ease-in-out infinite alternate;
+}
 }
 
 @keyframes gradientAnimation {
