feat:hooks-for-useInView

--- a/frontend/src/widgets/testimonials-slider/testimonials-slider.module.scss
+++ b/frontend/src/widgets/testimonials-slider/testimonials-slider.module.scss
@@ -1,6 +1,15 @@
+@use "../../shared/styles/tokens" as t;
 .swiperSlide {
   display: flex;
   justify-content: space-between;
   height: auto;
   flex-direction: column;
 }
+main{
+
+  #feedback-text{
+  @include t.typescale("display-medium");
+  color: var(--md-sys-color-primary);
+}
+}
+
